--- a/index.html
+++ b/index.html
@@ -431,20 +431,20 @@
                         <div class="row g-3">
                             <div class="col-md-12">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" name="name"  id="name" placeholder="Your Name" >
+                                    <input type="text" class="form-control" name="name"  id="name" placeholder="Your Name" required>
                                     <label for="name">Your Name</label>
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="form-floating">
-                                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" >
+                                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required >
                                     <label for="email">Your Email</label>
                                 </div>
                             </div>
                            
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px" name="message" ></textarea>
+                                    <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px" name="message" required></textarea>
                                     <label for="message">Message</label>
                                 </div>
                             </div>
